# pdfextractext

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/: main.py
src/api/: docs_api.py  main.py
src/config/: config.py
src/database/: mongodb.py
src/models/: document.py
src/services/: pdf_processor.py
tests/: test_api.py  test_database.py  test_docs.py  test_services.py
